# ProLongVid

./: README.md  pyproject.toml
llava/: conversation.py  utils.py
llava/eval/: eval_anet_qa.py  eval_vcg_1_correctness.py  eval_vcg_2_detail.py  eval_vcg_3_context.py  eval_vcg_4_temporal.py  eval_vcg_5_consistency.py  eval_videomme.py
llava/model/: builder.py  llava_arch.py  qwen_rope_scaling_monkey_patch.py
llava/model/language_model/: configuration_qwen2.py  custom_qwen2.py  llava_llama.py  llava_qwen.py  modeling_qwen2.py
llava/model/multimodal_encoder/: siglip_encoder.py
llava/train/: llava_trainer.py  train.py  train_mem.py
lmms-eval/: pyproject.toml
lmms-eval/lmms_eval/api/: task.py
lmms-eval/lmms_eval/models/: llava_onevision.py
lmms-eval/lmms_eval/tasks/_task_utils/: video_loader.py
lmms-eval/lmms_eval/tasks/activitynetqa/: _default_template_yaml  utils.py
lmms-eval/lmms_eval/tasks/egoschema/: utils.py
lmms-eval/lmms_eval/tasks/mlvu/: utils.py
lmms-eval/lmms_eval/tasks/mvbench/: _default_template.yaml
lmms-eval/lmms_eval/tasks/tempcompass/: utils.py
lmms-eval/lmms_eval/tasks/video_detail_description/: utils.py
lmms-eval/lmms_eval/tasks/videochatgpt/: utils.py
lmms-eval/lmms_eval/tasks/videomme/: videomme_w_subtitle.yaml
scripts/: zero1.json  zero2_offload.json  zero3.json  zero3_offload.json
scripts/train/: train_stage2.sh
